[tool.poetry]
name = "virtualnetworkstore"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiogram = "^3.16.0"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
sqladmin = "^0.20.1"
fastapi = "^0.115.6"
marzban-api-client = "^0.4.9"
redis = "^5.2.1"
celery = "^5.4.0"
apscheduler = "^3.11.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
